test:  ensure signUpController return an error if no email is provided

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "project": ["./tsconfig.json"]
   },
   "rules": {
-    "quotes": "off"
+    "quotes": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
