--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts",
     "prepare": "husky install",
     "test": "jest --passWithNoTests",
-    "test:watch": "npm run jest --watch",
+    "test:watch": "npm run test --watch",
     "test:staged": "npm run test --findRelatedTests"
   },
   "keywords": [],
